[package]
name = "chat"
version = "0.1.0"
edition = "2024"


[dependencies]
libp2p = { version = "0.52.0", features = [ "dns", "dcutr", "identify", "macros", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "yamux", "gossipsub", "websocket" , "request-response"] }
ratatui = { version = "0.29.0", features = ["all-widgets", "palette"] }
tokio = { version = "1.38", features = ["macros", "net", "rt", "signal", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.6", features = ["derive"] }
futures = "0.3"
futures-timer = "3.0"
async-trait = "0.1"




[[bin]]
name = "chat"
path = "src/chat.rs"

[[bin]]
name = "dcutr_chat"
path = "src/dcutr_chat.rs"

[[bin]]
name = "new2"
path = "src/new2.rs"

[[bin]]
name = "main"
path = "src/main.rs"





